// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/ListingActions > RowActions > should render Bucket directory 1`] = `
<div
  class="makeStyles-root-16"
>
  <div
    class="makeStyles-wrapper-19"
  >
    <div
      class="makeStyles-container-17"
    >
      <button
        class="makeStyles-root-21 makeStyles-item-18"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="makeStyles-root-21 makeStyles-item-18"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <form
        action="/zip/dir/bucketA/dirB/"
        class="makeStyles-item-18"
        method="POST"
        style="flex-shrink: 0;"
      >
        <input
          name="token"
          type="hidden"
          value="mock-token"
        />
        <button
          class="makeStyles-root-21 makeStyles-item-18"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Bucket file 1`] = `
<div
  class="makeStyles-root-22"
>
  <div
    class="makeStyles-wrapper-25"
  >
    <div
      class="makeStyles-container-23"
    >
      <button
        class="makeStyles-root-27 makeStyles-item-24"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="makeStyles-root-27 makeStyles-item-24"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <a
        class="makeStyles-root-27 makeStyles-item-24"
        download=""
        href="s3://bucketA/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Bucket file without download button 1`] = `
<div
  class="makeStyles-root-40"
>
  <div
    class="makeStyles-wrapper-43"
  >
    <div
      class="makeStyles-container-41"
    >
      <button
        class="makeStyles-root-45 makeStyles-item-42"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="makeStyles-root-45 makeStyles-item-42"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package directory 1`] = `
<div
  class="makeStyles-root-28"
>
  <div
    class="makeStyles-wrapper-31"
  >
    <div
      class="makeStyles-container-29"
    >
      <form
        action="/zip/package/bucketA/namespaceB/nameC/latest/dirD/"
        class="makeStyles-item-30"
        method="POST"
        style="flex-shrink: 0;"
      >
        <input
          name="token"
          type="hidden"
          value="mock-token"
        />
        <button
          class="makeStyles-root-33"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package directory without download button 1`] = `null`;

exports[`components/ListingActions > RowActions > should render Package file 1`] = `
<div
  class="makeStyles-root-34"
>
  <div
    class="makeStyles-wrapper-37"
  >
    <div
      class="makeStyles-container-35"
    >
      <a
        class="makeStyles-root-39 makeStyles-item-36"
        download=""
        href="s3://bucketa/pathB/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package file without download button 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if archived 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if no route 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if wrong route 1`] = `null`;
